--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="author" content="Zac Waite">
     <meta name="keywords" content="HTML, CSS, JavaScript">
-    <meta http-equiv = "refresh" content = "0; url = /Frontend/build/index.html" />
+    <meta http-equiv = "refresh" content = "0; url = /CartTech/Frontend/build/index.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <base href="#" target="_self">
     <link rel="icon" type="image/x-icon" href="files/favicon.ico" />
